...
    <!-- Failure code text for revoked authorization of payment, displayed in a dialog or notification as a message. -->
    <string name="InAppPaymentErrors__StripeFailureCode__this_payment_was_revoked">This payment was revoked by the account holder and could not be processed. You haven\'t been charged.</string>
    <!-- Failure code text for a payment lacking an authorized mandate or incorrect mandate, displayed in a dialog or notification as a message.-->
    <string name="InAppPaymentErrors__StripeFailureCode__an_error_occurred_while_processing_this_payment">An error occurred while processing this payment, please try again.</string>

    <!-- Displayed in notification when user payment fails to process on Stripe -->
    <string name="DonationsErrors__error_processing_payment">Error processing donation</string>
    <!-- Displayed on manage donations screen as a dialog message when payment method failed -->
    <string name="DonationsErrors__try_another_payment_method">Try another payment method or contact your bank for more information.</string>
    <!-- Displayed on manage donations screen error dialogs as an action label -->
    <string name="DonationsErrors__learn_more">Learn more</string>
    <!-- Displayed on "My Support" screen when user subscription payment method failed. -->
    <string name="DonationsErrors__error_processing_payment_s">Error processing donation. %1$s</string>
    <string name="DonationsErrors__your_payment">Your donation couldn\'t be processed and you have not been charged. Please try again.</string>
    <string name="DonationsErrors__still_processing">Still processing</string>
    <string name="DonationsErrors__couldnt_add_badge">Couldn\'t add badge</string>
    <!-- Displayed when backup credential could not be redeemed. Dialog or notification title -->
    <string name="DonationsError__something_went_wrong">Something went wrong</string>
    <!-- Displayed when backup credential could not be redeemed. Dialog or notification body -->
    <string name="DonationsError__your_backups_subscription_couldnt_be_displayed">Your backups subscription couldn\'t be displayed. Please contact support.</string>
...
    <string name="BackupSchedulePermissionMegaphone__go_to_settings">Go to settings</string>

    <!-- DonateToSignalFragment -->
    <!-- Title below avatar -->
    <string name="DonateToSignalFragment__privacy_over_profit">Proudly Nonprofit</string>
    <!-- Continue button label -->
    <string name="DonateToSignalFragment__continue">Continue</string>
    <!-- Description below title -->
    <string name="DonateToSignalFragment__private_messaging">Donate to support private messaging. Keep Signal independent and ad-free.</string>
    <!-- Dialog title when a user tries to donate while they already have a pending donation. -->
    <string name="DonateToSignalFragment__you_have_a_donation_pending">You have a donation pending</string>
    <!-- Dialog body when a user tries to donate while they already have a pending monthly donation. -->
    <string name="DonateToSignalFragment__bank_transfers_usually_take_1_business_day_to_process_monthly">Bank transfers can take 1 to 14 business days to process. Please wait until this payment completes before updating your subscription.</string>
...
