...
    android:layout_marginStart="@dimen/dsl_settings_gutter"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="@dimen/dsl_settings_gutter"
    tools:viewBindingIgnore="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boost_1"
        style="@style/Signal.Widget.Button.Large.Secondary"
        android:layout_width="0dp"
        android:layout_height="58sp"
        android:textAppearance="@style/Signal.Text.Body"
        android:textColor="?attr/signal_text_primary"
        app:backgroundTint="@color/signal_selectable_button_background_tint"
...
