<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="notes_list_fragment__fab_new_note">New note</string>
    <string name="notes_list_fragment__empty_state_no_notes">You don\'t have any notes yet.</string>

    <plurals name="NotesListFragment_delete_notes_confirmation_title">
        <item quantity="one">Delete %d note?</item>
        <item quantity="other">Delete %d notes?</item>
    </plurals>
    <string name="NotesListFragment_delete_notes_confirmation_message">This will permanently delete the selected note(s).</string>
    <string name="edit_note_content_hint">Note content</string>

    <string name="edit_note_title_hint">Title</string>
    <string name="edit_profile_fragment_title_new_note">New Note</string>
    <string name="edit_profile_fragment_title_edit_note">Edit Note</string>
    <string name="main_navigation_notebook">Notebook</string>
</resources>
