<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?attr/signal_background_primary"
    android:orientation="vertical">

    <EditText
        android:id="@+id/country_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/symbol_search_24"
        android:hint="@string/country_selection_fragment__search"
        app:drawableTint="?attr/signal_icon_tint_primary" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:choiceMode="singleChoice"
        android:divider="@color/signal_divider_minor"
        android:dividerHeight="1dp" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/country_selection_fragment__loading_countries"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
