...
    <View
        android:id="@+id/note_item_color_indicator"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:background="@drawable/note_color_indicator_default"
        app:layout_constraintTop_toTopOf="@+id/note_item_title"
        app:layout_constraintBottom_toBottomOf="@+id/note_item_snippet"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        tools:backgroundTint="@color/signal_accent_blue"/> <!-- Default or placeholder color -->

    <TextView
        android:id="@+id/note_item_title"
...
